--- a/blocks/page.css
+++ b/blocks/page.css
@@ -1,6 +1,8 @@
 .page {
+  position: relative;
   font-family: "Poppins";
-  font-size: 12px;
   background-color: #d1e0ff;
+  color: #297fd0;
   min-height: 100vh;
+  z-index: 0;
 }
