--- a/pages/index.css
+++ b/pages/index.css
@@ -8,3 +8,4 @@
 @import url("../blocks/form-weight.css");
 @import url("../blocks/weight-info.css");
 @import url("../blocks/info-column.css");
+@import url("../blocks/slide-bar.css");
