--- a/blocks/weight-info.css
+++ b/blocks/weight-info.css
@@ -1,30 +1,26 @@
 .weight-info {
-}
-
-.weight-info__container {
-  display: grid;
-  max-width: 930px;
-  grid-template-columns: repeat(3, auto);
-  grid-template-rows: repeat(3, auto);
-  grid-template-areas: "name . dates" "days pounds kilograms" ". percentage .";
-  place-items: center;
+  display: flex;
+  flex-direction: column;
+  box-sizing: border-box;
+  border-radius: 15px;
+  max-width: 980px;
   row-gap: 36px;
   margin: 40px auto;
   padding: 26px;
   background-color: #e6f0fd;
-  border-radius: 15px;
   box-shadow: 2px 4px 10px rgba(0, 0, 0, 0.2);
 }
 
-.weight-info__column-name {
-  grid-area: name;
-  place-self: start;
+.weight-info__header {
+  display: flex;
+  justify-content: space-between;
 }
 
 .weight-info__name {
   margin: 0 0 5px 0;
   color: #0d5297;
   font-size: 26px;
+  line-height: 0.8;
 }
 
 .weight-info__btn {
@@ -34,8 +30,6 @@
 }
 
 .weight-info__column-dates {
-  grid-area: dates;
-  place-self: end;
   text-align: right;
   margin: 0;
   padding: 0;
@@ -48,4 +42,15 @@
 
 .weight-info__date {
   margin: 0;
+}
+
+.weight-info__values-container {
+  display: flex;
+  justify-content: space-around;
+}
+
+@media screen and (max-width: 1024px) {
+  .weight-info {
+    max-width: 95.5vw;
+  }
 }
