--- a/pages/index.css
+++ b/pages/index.css
@@ -2,10 +2,11 @@
 @import url("../vendor/fonts.css");
 @import url("../blocks/page.css");
 @import url("../blocks/header.css");
-@import url("../blocks/weight-form.css");
 @import url("../blocks/nav.css");
-@import url("../blocks/content.css");
 @import url("../blocks/form-weight.css");
+@import url("../blocks/content.css");
 @import url("../blocks/weight-info.css");
 @import url("../blocks/info-column.css");
 @import url("../blocks/slide-bar.css");
+@import url("../blocks/daily-tracker.css");
+@import url("../blocks/track-table.css");
