change grid to flex and fix content

--- a/blocks/weight-info.css
+++ b/blocks/weight-info.css
@@ -44,6 +44,10 @@
   margin: 0;
 }
 
+.info-column__title {
+  text-align: center;
+}
+
 .weight-info__values-container {
   display: flex;
   justify-content: space-around;
