--- a/blocks/daily-tracker.css
+++ b/blocks/daily-tracker.css
@@ -11,7 +11,7 @@
   font-weight: 600;
   text-align: center;
   margin: 0;
-  padding: 5px 0;
+  padding: 8px 0;
   background-color: #2b71b7;
   color: #e6f0fd;
   border-top-left-radius: 15px;
@@ -21,5 +21,17 @@
 @media screen and (max-width: 1024px) {
   .daily-tracker {
     max-width: 95.5vw;
+  }
+}
+
+@media screen and (max-width: 640px) {
+  .daily-tracker {
+    max-width: 100%;
+    border-radius: 0;
+  }
+
+  .daily-tracker__title {
+    border-radius: 0;
+    font-size: 12px;
   }
 }
