--- a/blocks/slide-bar.css
+++ b/blocks/slide-bar.css
@@ -5,7 +5,7 @@
 .slide-bar__infographic {
   -webkit-appearance: none;
   width: 277px;
-  height: 12px;
+  height: 10px;
   background: linear-gradient(to right, #ff0000, #ffff00 27%, #00be00);
   border-radius: 5px;
   outline: none;
@@ -15,16 +15,16 @@
 .slide-bar__infographic::-webkit-slider-thumb {
   -webkit-appearance: none;
   appearance: none;
-  width: 17px;
-  height: 17px;
+  width: 18px;
+  height: 18px;
   border-radius: 50%;
   border: solid #2653a8 2px;
   background: #6aaaff;
 }
 
 .slide-bar__infographic::-moz-range-thumb {
-  width: 17px;
-  height: 17px;
+  width: 20px;
+  height: 10px;
   border-radius: 50%;
   border: solid #2653a8 2px;
   background: #6aaaff;
@@ -54,6 +54,26 @@
   color: #e6f0fd;
   width: fit-content;
   margin: 13px auto 0;
-  padding: 3px 7px;
+  padding: 3px 5px;
   border-radius: 5px;
+  letter-spacing: 1.2px;
+}
+
+@media screen and (max-width: 640px) {
+  .slide-bar__infographic {
+    width: 190px;
+  }
+
+  .slide-bar__legend {
+    width: 220px;
+    margin: auto;
+  }
+
+  .slide-bar__minus-ten {
+    margin-right: 25px;
+  }
+
+  .slide-bar__status {
+    font-size: 12px;
+  }
 }
