--- a/blocks/form-weight.css
+++ b/blocks/form-weight.css
@@ -8,7 +8,7 @@
 
 .form-weight__inputs {
   box-sizing: border-box;
-  font-size: 15px;
+  font-size: 16px;
   text-align: center;
   padding: 0 20px;
   border-radius: 5px;
@@ -41,16 +41,25 @@
   background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="16" height="15" viewBox="0 0 24 24"><path fill="%23337eca" d="M20 3h-1V1h-2v2H7V1H5v2H4c-1.1 0-2 .9-2 2v16c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2zm0 18H4V8h16v13z"/></svg>');
 }
 
+.form-weight__label-pounds {
+  position: relative;
+}
+
 .form-weight__pounds {
   width: 80px;
   height: 40px;
 }
 
 .form-weight__pounds-abbreviation {
+  font-size: 14px;
   color: #297fd0;
   position: absolute;
-  top: 32px;
-  right: 178px;
+  top: 20px;
+  right: 4px;
+}
+
+.form-weight__label-ounces {
+  position: relative;
 }
 
 .form-weight__ounces {
@@ -59,10 +68,11 @@
 }
 
 .form-weight__ounces-abbreviation {
+  font-size: 14px;
   color: #297fd0;
   position: absolute;
-  top: 32px;
-  right: 92px;
+  top: 20px;
+  right: 4px;
 }
 
 .form-weight__button {
@@ -76,4 +86,44 @@
 
 .form-weight__button:hover {
   background-color: #2b99ff;
+}
+
+@media screen and (max-width: 640px) {
+  .form-weight__fieldset {
+    justify-content: center;
+  }
+  .form-weight__inputs {
+    height: 35px;
+    font-size: 12px;
+  }
+
+  .form-weight__date {
+    width: 120px;
+    font-size: 12px;
+  }
+
+  .form-weight__pounds {
+    width: 49px;
+    padding: 15px;
+  }
+
+  .form-weight__pounds-abbreviation {
+    top: 21px;
+    font-size: 12px;
+  }
+
+  .form-weight__ounces {
+    width: 49px;
+    padding: 15px;
+  }
+
+  .form-weight__ounces-abbreviation {
+    top: 21px;
+    font-size: 12px;
+  }
+
+  .form-weight__button {
+    width: 65px;
+    font-size: 12px;
+  }
 }
