--- a/blocks/page.css
+++ b/blocks/page.css
@@ -1,8 +1,10 @@
 .page {
+  display: flex;
+  flex-direction: column;
   position: relative;
   font-family: "Poppins";
   background-color: #d1e0ff;
   color: #297fd0;
-  min-height: 100vh;
+  height: 100vh;
   z-index: 0;
 }
