--- a/pages/index.css
+++ b/pages/index.css
@@ -10,3 +10,5 @@
 @import url("../blocks/slide-bar.css");
 @import url("../blocks/daily-tracker.css");
 @import url("../blocks/track-table.css");
+@import url("../blocks/float-btn.css");
+@import url("../blocks/footer.css");
