--- a/blocks/form-weight.css
+++ b/blocks/form-weight.css
@@ -20,9 +20,14 @@
 .form-weight__inputs::-webkit-outer-spin-button,
 .form-weight__inputs::-webkit-inner-spin-button,
 .form-weight__inputs::-webkit-calendar-picker-indicator {
+  display: none;
   -webkit-appearance: none;
   opacity: 0;
   margin: 0;
+}
+
+.form-weight__inputs {
+  -webkit-appearance: none;
 }
 
 .form-weight__inputs[type="number"] {
@@ -48,7 +53,8 @@
   position: absolute;
   width: 15px;
   top: 10px;
-  right: 5px;
+  right: 6px;
+  pointer-events: none;
 }
 
 /* .form-weight__date::-webkit-calendar-picker-indicator {
