--- a/blocks/form-weight.css
+++ b/blocks/form-weight.css
@@ -43,17 +43,17 @@
 }
 
 .form-weight__date {
-  width: 148px;
-  font-variant-numeric: tabular-nums;
+  width: 135px;
   height: 40px;
-  padding: 0 3px;
+  padding: 0 10px;
+  text-align: left;
 }
 
 .form-weight__calendar-icon {
   position: absolute;
   width: 15px;
   top: 10px;
-  right: 6px;
+  right: 8px;
   pointer-events: none;
 }
 
@@ -118,7 +118,7 @@
   }
 
   .form-weight__date {
-    width: 120px;
+    width: 110px;
     font-size: 12px;
   }
 
