--- a/blocks/form-weight.css
+++ b/blocks/form-weight.css
@@ -45,7 +45,7 @@
 .form-weight__date {
   width: 135px;
   height: 40px;
-  padding: 0 10px;
+  padding: 0 0 0 8px;
   text-align: left;
 }
 
@@ -118,7 +118,7 @@
   }
 
   .form-weight__date {
-    width: 110px;
+    width: 105px;
     font-size: 12px;
   }
 
