--- a/blocks/form-weight.css
+++ b/blocks/form-weight.css
@@ -20,10 +20,8 @@
 .form-weight__inputs::-webkit-outer-spin-button,
 .form-weight__inputs::-webkit-inner-spin-button,
 .form-weight__inputs::-webkit-calendar-picker-indicator {
-  display: none;
   -webkit-appearance: none;
   opacity: 0;
-  margin: 0;
 }
 
 .form-weight__inputs {
@@ -43,7 +41,7 @@
 }
 
 .form-weight__date {
-  width: 135px;
+  width: 130px;
   height: 40px;
   padding: 0 0 0 8px;
   text-align: left;
@@ -56,10 +54,6 @@
   right: 8px;
   pointer-events: none;
 }
-
-/* .form-weight__date::-webkit-calendar-picker-indicator {
-  background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="16" height="15" viewBox="0 0 24 24"><path fill="%23337eca" d="M20 3h-1V1h-2v2H7V1H5v2H4c-1.1 0-2 .9-2 2v16c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2zm0 18H4V8h16v13z"/></svg>');
-} */
 
 .form-weight__label-pounds {
   position: relative;
@@ -122,8 +116,12 @@
     font-size: 12px;
   }
 
+  .form-weight__calendar-icon {
+    right: 10px;
+  }
+
   .form-weight__pounds {
-    width: 53px;
+    width: 16.5vw;
     padding: 15px;
   }
 
@@ -133,7 +131,7 @@
   }
 
   .form-weight__ounces {
-    width: 53px;
+    width: 16.5vw;
     padding: 15px;
   }
 
