--- a/blocks/slide-bar.css
+++ b/blocks/slide-bar.css
@@ -6,7 +6,7 @@
   -webkit-appearance: none;
   width: 277px;
   height: 10px;
-  background: linear-gradient(to right, #ff0000, #ffff00 27%, #00be00);
+  background: linear-gradient(to right, #ff0000db, #ffff00 27%, #00ff00);
   border-radius: 5px;
   outline: none;
   opacity: 0.7;
@@ -50,7 +50,7 @@
 }
 
 .slide-bar__status {
-  background-color: #00be00;
+  background-color: #0eaa0e;
   color: #e6f0fd;
   width: fit-content;
   margin: 13px auto 0;
