--- a/pages/index.css
+++ b/pages/index.css
@@ -5,6 +5,7 @@
 @import url("../blocks/nav.css");
 @import url("../blocks/form-weight.css");
 @import url("../blocks/content.css");
+@import url("../blocks/alert.css");
 @import url("../blocks/weight-info.css");
 @import url("../blocks/info-column.css");
 @import url("../blocks/slide-bar.css");
