add function to change color of the selected item

--- a/blocks/track-table.css
+++ b/blocks/track-table.css
@@ -34,6 +34,11 @@
   padding: 6px;
 }
 
+.track-table .track-table__rows_selected {
+  background-color: #2b71b7;
+  color: #e6f0fd;
+}
+
 .track-table__btn {
   background-color: #2b71b7;
   border-color: transparent;
