add section chart

--- a/pages/index.css
+++ b/pages/index.css
@@ -11,5 +11,6 @@
 @import url("../blocks/slide-bar.css");
 @import url("../blocks/daily-tracker.css");
 @import url("../blocks/track-table.css");
+@import url("../blocks/chart.css");
 @import url("../blocks/toggle-btn.css");
 @import url("../blocks/footer.css");
