--- a/blocks/chart.css
+++ b/blocks/chart.css
@@ -1,5 +1,11 @@
 .chart {
   padding: 20px;
+  max-width: 980px;
+  box-sizing: border-box;
+  background-color: #e6f0fd;
+  border-radius: 15px;
+  margin: 0 auto 80px;
+  box-shadow: 2px 4px 10px rgba(0, 0, 0, 0.2);
 }
 
 .chart__title {
@@ -10,12 +16,8 @@
 }
 
 .chart__container {
-  width: 95%;
-  font-size: 5px;
+  width: 100%;
   height: 300px;
-  margin: 0 auto;
-  padding: 0;
-  border-radius: 20px;
 }
 
 text {
@@ -52,4 +54,29 @@ text {
 
 .chart__square_dangerous {
   background-color: #d10000db;
+}
+
+@media screen and (max-width: 1024px) {
+  .chart {
+    max-width: 95.5vw;
+  }
+}
+
+@media screen and (max-width: 640px) {
+  .chart {
+    max-width: 100%;
+    border-radius: 0;
+  }
+
+  .chart__container {
+    height: 200px;
+  }
+
+  .chart__container text {
+    font-size: 12px;
+  }
+
+  .chart__legend {
+    font-size: 12px;
+  }
 }
