--- a/pages/index.css
+++ b/pages/index.css
@@ -6,6 +6,7 @@
 @import url("../blocks/form-weight.css");
 @import url("../blocks/content.css");
 @import url("../blocks/alert.css");
+@import url("../blocks/register.css");
 @import url("../blocks/weight-info.css");
 @import url("../blocks/info-column.css");
 @import url("../blocks/slide-bar.css");
