--- a/blocks/nav.css
+++ b/blocks/nav.css
@@ -12,7 +12,7 @@
 }
 
 .nav__button {
-  display: flex;
+  display: none;
   align-items: center;
   gap: 6px;
   height: auto;
@@ -23,6 +23,10 @@
   font-size: 14px;
   color: #e6f0fd;
   transition: background-color linear 0.3s;
+}
+
+.nav__button_show {
+  display: flex;
 }
 
 .span {
