--- a/blocks/register.css
+++ b/blocks/register.css
@@ -1,7 +1,7 @@
 .register__container {
   box-sizing: border-box;
   border-radius: 15px;
-  max-width: 600px;
+  max-width: 637px;
   margin: 40px auto;
   padding: 26px;
   background-color: #a9cbff;
@@ -22,7 +22,7 @@
 .register__fieldset {
   display: flex;
   flex-wrap: wrap;
-  gap: 10px;
+  gap: 15px 10px;
   border: none;
   margin: 0;
   padding: 0;
@@ -32,75 +32,216 @@
 .register__name {
   display: flex;
   width: 100%;
-  column-gap: 10px;
+  gap: 15px 10px;
 }
 
 .register__label {
   display: flex;
-  width: 100%;
+  position: relative;
   flex-direction: column;
+}
+
+.register__label_fname {
+  width: 100%;
+}
+
+.register__label_lname {
+  width: 100%;
 }
 
 .register__label_birthday {
   width: fit-content;
 }
-.register__input {
-  height: 40px;
+.register__inputs {
+  height: 45px;
   width: 100%;
   color: #297fd0;
-  padding: 5px 10px;
+  padding: 5px 12px;
   margin-top: 5px;
   border-radius: 5px;
   box-sizing: border-box;
   border: none;
+  -webkit-appearance: none;
 }
 
-.register__input::placeholder {
+.register__inputs::-webkit-outer-spin-button,
+.register__inputs::-webkit-inner-spin-button,
+.register__inputs::-webkit-calendar-picker-indicator {
+  -webkit-appearance: none;
+  opacity: 0;
+}
+
+.register__inputs::placeholder {
   color: #9cc6ed;
 }
 
 .register__info-container {
   display: flex;
-
-  gap: 10px;
+  gap: 15px 10px;
 }
 
 .register__weight-container {
   display: flex;
-  gap: 10px;
+  gap: 15px 10px;
   width: 100%;
 }
 
-.register__input_birthday {
-  width: 135px;
+.register__inputs_kilograms-pounds {
+  width: 80px;
+  text-align: center;
 }
-.register__input_kilograms-pounds {
-  width: 100%;
-}
-.register__input_kilograms-pounds::placeholder {
+.register__inputs_kilograms-pounds::placeholder {
   color: #297fd0;
 }
 
-.register__input_ounces {
-  width: 100%;
+.register__inputs_ounces {
+  width: 80px;
+  text-align: center;
+  box-sizing: border-box;
 }
 
-.register__input_ounces::placeholder {
+.register__inputs_ounces::placeholder {
   color: #297fd0;
 }
 
-.register__weight-type {
+.register__pounds-abbreviation {
+  position: absolute;
+  top: 52px;
+  left: 57px;
+  font-size: 14px;
+}
+
+.register__ounces-abbreviation {
+  position: absolute;
+  top: 52px;
+  left: 152px;
+  font-size: 14px;
+}
+
+.register__inputs_weight-type {
   width: 125px;
+  -webkit-appearance: auto;
+}
+
+.register__inputs_birthday {
+  width: 140px;
+  padding: 5px 10px;
+}
+
+.register__calendar-icon {
+  position: absolute;
+  width: 15px;
+  top: 36px;
+  right: 12.5px;
+  pointer-events: none;
 }
 
 .register__btn {
-  grid-area: button;
-  width: 70px;
-  height: 40px;
+  height: 45px;
+  width: 120px;
+  margin: 0 auto;
   align-self: flex-end;
   border-radius: 5px;
   border-color: transparent;
   color: #e6f0fd;
   background-color: #297fd0;
   transition: background-color linear 0.3s;
+}
+
+@media screen and (max-width: 640px) {
+  .register {
+    width: 100vw;
+  }
+
+  .register__container {
+    margin-top: 0;
+    width: 100vw;
+    height: calc(100vh - 29.8px - 48.59px);
+    max-width: none;
+    padding: 30px 25px 0;
+    margin: 0;
+  }
+
+  .register__fieldset {
+    width: fit-content;
+  }
+  .register__name {
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+  .register__info-container {
+    flex-wrap: wrap;
+    width: 100%;
+    justify-content: center;
+  }
+
+  .register__label {
+    font-size: 14px;
+  }
+
+  .register__label_fname {
+    width: 88.745vw;
+  }
+
+  .register__label_lname {
+    width: 88.745vw;
+  }
+
+  .register__inputs {
+    font-size: 12px;
+  }
+
+  .register__inputs_kilograms-pounds {
+    width: 77.5px;
+  }
+
+  .register__inputs_ounces {
+    width: 77.5px;
+  }
+
+  .register__pounds-abbreviation {
+    top: 52px;
+    left: 57px;
+    font-size: 10px;
+  }
+
+  .register__ounces-abbreviation {
+    top: 52px;
+    left: 152px;
+    font-size: 10px;
+  }
+
+  .register__inputs_weight-type {
+    width: 105px;
+  }
+
+  .register__inputs_birthday {
+    width: 120px;
+    padding: 5px 10px;
+  }
+
+  .register__btn {
+    margin: 0;
+  }
+}
+
+@media screen and (max-width: 360px) {
+  .register__container {
+    padding: 30px 20px 0;
+  }
+
+  .register__label_fname {
+    width: 100%;
+  }
+
+  .register__label_lname {
+    width: 100%;
+  }
+}
+
+@media (hover: hover) and (pointer: fine) {
+  .register__btn:hover {
+    background-color: #2b99ff;
+    cursor: pointer;
+  }
 }
