--- a/blocks/form-weight.css
+++ b/blocks/form-weight.css
@@ -13,7 +13,6 @@
   height: 45px;
   border-radius: 5px;
   border-color: transparent;
-  background-color: white;
   color: #337eca;
 }
 
@@ -134,6 +133,7 @@
 
   .form-weight__calendar-icon {
     right: 12px;
+    top: 10px;
   }
 
   .form-weight__pounds {
